--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/uuid": "^11.0.0",
     "drizzle-kit": "^0.31.8"
   },
   "peerDependencies": {
@@ -13,6 +14,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "better-auth": "^1.4.10",
-    "drizzle-orm": "^0.45.1"
+    "drizzle-orm": "^0.45.1",
+    "uuid": "^13.0.0"
   }
 }
