--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build:fe": "bun build ./src/fe/index.html --outdir ./dist"
   },
   "name": "vekku-server-bun",
   "module": "index.ts",
@@ -9,6 +10,8 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/bun": "latest",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^11.0.0",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
@@ -26,6 +29,8 @@
     "better-auth": "^1.4.10",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "uuid": "^13.0.0"
   }
 }
