feat(api): implement domain-driven routing pattern
- Created Hono routers in _internal/routes.ts for user and tag domains.
- Exported routers via domain index.ts using factory pattern to avoid circular dependencies.
- Mounted routers in main src/index.ts.
- Added setup.md and .env.example.
- Removed unused root index.ts.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build:fe": "bun build ./src/fe/index.html --outdir ./dist"
+    "build:fe": "bun build ./src/fe/index.html --outdir ./dist",
+    "dev:all": "bun run build:fe --watch & bun run dev"
   },
   "name": "vekku-server-bun",
   "module": "index.ts",
