--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bun": "latest",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^11.0.0",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.2",
@@ -27,11 +28,13 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "axios": "^1.13.2",
     "better-auth": "^1.4.10",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.12.0",
     "uuid": "^13.0.0"
   }
 }
