refactor: code cleanup and db tooling improvements
- BE: Renamed TagService to TagServiceImpl for consistency.
- FE: Extracted UI components (Button, Input, Layout) and cleaned up inline styles in Auth/Dashboard pages.
- DB: Added drizzle-kit scripts (push, generate, studio) to package.json.
- Docs: Updated setup.md with database management section.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "build:fe": "bun build ./src/fe/index.html --outdir ./dist",
-    "dev:all": "bun run build:fe --watch & bun run dev"
+    "dev:all": "bun run build:fe --watch & bun run dev",
+    "db:push": "bun x drizzle-kit push",
+    "db:generate": "bun x drizzle-kit generate",
+    "db:studio": "bun x drizzle-kit studio"
   },
   "name": "vekku-server-bun",
   "module": "index.ts",
