--- a/package.json
+++ b/package.json
@@ -11,15 +11,9 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
     "@types/bun": "latest",
     "@types/uuid": "^11.0.0",
-    "drizzle-kit": "^0.31.8",
-    "eslint": "^9.39.2",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "globals": "^17.0.0",
-    "typescript-eslint": "^8.52.0"
+    "drizzle-kit": "^0.31.8"
   },
   "peerDependencies": {
     "typescript": "^5"
