--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Database (Neon/Postgres)
 DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 
-# Auth
-JWT_SECRET=your-super-secret-key-change-it
+# Auth (Better Auth)
+BETTER_AUTH_SECRET=your-better-auth-secret
+BETTER_AUTH_URL=http://localhost:3000
