Cleanup: Completely eradicate Better Auth and finalize custom stateless auth

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-BETTER_AUTH_SECRET=TbL0Ha1gNTWpHG3OhhUpFtMy0A2HCCws
-BETTER_AUTH_URL=http://localhost:3000
+JWT_SECRET=TbL0Ha1gNTWpHG3OhhUpFtMy0A2HCCws
+BASE_URL=http://localhost:3000
