--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@xenova/transformers": "^2.17.2",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
     "uuid": "^13.0.0"
