Feat: Implement Cloudflare Embedding Service

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
 
 # Auth
 JWT_SECRET=your-secure-jwt-secret-key
+# Cloudflare worker
+CLOUDFLARE_WORKER_AI_API_KEY=ABCD
+CLOUDFLARE_WORKER_ACCOUNT_ID=e5efdd00f6255c6e20a89228a1da885f
