--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev:be": "bun run --hot src/index.ts",
     "db:push": "bun x drizzle-kit push",
     "db:generate": "bun x drizzle-kit generate",
-    "db:studio": "bun x drizzle-kit studio"
+    "db:studio": "bun x drizzle-kit studio",
+    "test:ui": "bun x http-server test/web-ui -p 8080"
   },
   "name": "vekku-server-bun",
   "module": "index.ts",
