feat: optimize suggestions, improve auth, and update web ui

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-# Database (Neon/Postgres)
-DATABASE_URL=postgresql://user:password@host/dbname?sslmode=require
-
-# Auth
-JWT_SECRET=your-secure-jwt-secret-key
-# Cloudflare worker
-CLOUDFLARE_WORKER_AI_API_KEY=ABCD
-CLOUDFLARE_WORKER_ACCOUNT_ID=e5efdd00f6255c6e20a89228a1da885f
+DATABASE_URL='postgresql://123:123@ep-proud-haze-a13eiws8-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+JWT_SECRET=123
+CLOUDFLARE_WORKER_AI_API_KEY=12
+CLOUDFLARE_WORKER_ACCOUNT_ID=123
+EMBEDDING_THRESHOLD=0.4
+EMBEDDING_MATCH_COUNT=10
