--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/uuid": "^11.0.0",
-    "drizzle-kit": "^0.31.8"
+    "drizzle-kit": "^0.31.8",
+    "wrangler": "^4.59.2"
   },
   "peerDependencies": {
     "typescript": "^5"
