feat: add notification service and update dependencies
- Add  for handling notifications.
- Implement  with  and local fallback.
- Update  to initialize notification configuration.
- Update  compatibility date to  for  support.
- Fix  to return non-zero vectors to prevent pgvector errors.
- Update  with notification keys.

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 JWT_SECRET=TbL0Ha1gNTWpHG3OhhUpFtMy0A2HCCws
 CLOUDFLARE_WORKER_ACCOUNT_ID=
 CLOUDFLARE_WORKER_AI_API_KEY=
+NOTIFICATION_API_CLIENT_ID=123
+NOTIFICATION_API_CLIENT_SECRET=123
