--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ CLOUDFLARE_WORKER_AI_API_KEY=12
 CLOUDFLARE_WORKER_ACCOUNT_ID=123
 EMBEDDING_THRESHOLD=0.4
 EMBEDDING_MATCH_COUNT=10
+NOTIFICATION_API_CLIENT_ID=
+NOTIFICATION_API_CLIENT_SECRET=
