--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
+    "notificationapi-node-server-sdk": "^2.8.0",
     "uuid": "^13.0.0"
   }
 }
