removed hard coded ai model from code and moed it to .env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-DATABASE_URL='postgresql://123:123@ep-proud-haze-a13eiws8-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL='postgresql://123:123@ep-proud-hazasdasdf-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 JWT_SECRET=123
 CLOUDFLARE_WORKER_AI_API_KEY=12
 CLOUDFLARE_WORKER_ACCOUNT_ID=123
+CLOUDFLARE_AI_MODEL='@cf/baai/bge-small-en-v1.5'
 EMBEDDING_THRESHOLD=0.4
 EMBEDDING_MATCH_COUNT=10
 NOTIFICATION_API_CLIENT_ID=
