added route to fe

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ EMBEDDING_THRESHOLD=0.4
 EMBEDDING_MATCH_COUNT=10
 NOTIFICATION_API_CLIENT_ID=
 NOTIFICATION_API_CLIENT_SECRET=
+FRONTEND_URL='http://localhost:5173'
