--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.3",
     "uuid": "^13.0.0"
