--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,8 @@ compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
 [vars]
-# DATABASE_URL will be set via `wrangler secret put DATABASE_URL`
-# WORKER="true" is set automatically by the runtime env check if we want, or we can set it here.
 WORKER = "true"
-
-# If we were using Cloudflare D1 or KV, we'd define them here.
-# For Neon, we just use the TCP/HTTP connection.
+CLOUDFLARE_AI_MODEL = "@cf/baai/bge-small-en-v1.5"
+FRONTEND_URL = "http://localhost:5173"
+EMBEDDING_THRESHOLD = "0.4"
+EMBEDDING_MATCH_COUNT = "10"
