feat: integrate upstash redis for rate limiting - Add @upstash/redis and @upstash/ratelimit dependencies - Implement platform-agnostic Redis client configuration - Add rate limiting middleware (10 req/10s) - Update documentation and architectural guidelines

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,6 @@ EMBEDDING_THRESHOLD=0.4
 EMBEDDING_MATCH_COUNT=10
 NOTIFICATION_API_CLIENT_ID=
 NOTIFICATION_API_CLIENT_SECRET=
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
 FRONTEND_URL='http://localhost:5173'
