--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,6 @@ compatibility_flags = ["nodejs_compat"]
 [vars]
 WORKER = "true"
 CLOUDFLARE_AI_MODEL = "@cf/baai/bge-small-en-v1.5"
-FRONTEND_URL = "http://localhost:5173"
+FRONTEND_URL = "https://vekku-reactjs.vercel.app"
 EMBEDDING_THRESHOLD = "0.4"
 EMBEDDING_MATCH_COUNT = "10"
