feat: add config endpoint and author links via wrangler env

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,3 +9,5 @@ CLOUDFLARE_AI_MODEL = "@cf/baai/bge-small-en-v1.5"
 FRONTEND_URL = "https://vekku-reactjs.vercel.app"
 EMBEDDING_THRESHOLD = "0.4"
 EMBEDDING_MATCH_COUNT = "10"
+GITHUB_URL = "https://github.com/kuchuk-borom-debbarma"
+GMAIL_URL = "mailto:kuchukboromd@gmail.com"
